infrastructure/k8s/upload-service/all.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: upload-service
  namespace: finance-platform
spec:
  replicas: 1
  selector:
    matchLabels:
      app: upload-service
  template:
    metadata:
      labels:
        app: upload-service
    spec:
      containers:
        - name: upload-service
          image: 014071048720.dkr.ecr.ap-south-1.amazonaws.com/finance-platform/dev/upload-service:latest
          imagePullPolicy: Always
          # image: 014071048720.dkr.ecr.ap-south-1.amazonaws.com/finance-platform/dev/upload-service:latest
          # imagePullPolicy: Always
          ports:
            - containerPort: 3002
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
          readinessProbe:
            httpGet:
              path: /api/v1/health/ready
              port: 3002
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/v1/health
              port: 3002
            initialDelaySeconds: 30
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: upload-service
  namespace: finance-platform
spec:
  selector:
    app: upload-service
  ports:
    - port: 80
      targetPort: 3002
      protocol: TCP
  type: ClusterIP
